xedoc-rs/tui-transcript/src/history_cell/snapshots/xedoc_tui_transcript__history_cell__tests__active_mcp_tool_call_snapshot.snap
---
source: tui-transcript/src/history_cell.rs
expression: rendered
---
• Calling search.find_docs({"query":"ratatui styling","limit":3})
