xedoc-rs/tui-transcript/src/history_cell/snapshots/xedoc_tui_transcript__history_cell__tests__coalesced_reads_dedupe_names.snap
---
source: tui-transcript/src/history_cell.rs
expression: rendered
---
• Explored
  └ Read auth.rs, shimmer.rs
