xedoc-rs/tui-transcript/src/history_cell/snapshots/xedoc_tui_transcript__history_cell__tests__completed_mcp_tool_call_success_snapshot.snap
---
source: tui-transcript/src/history_cell.rs
expression: rendered
---
• Called search.find_docs({"query":"ratatui styling","limit":3})
  └ Found styling guidance in styles.md
