xedoc-rs/tui-transcript/src/history_cell/snapshots/xedoc_tui_transcript__history_cell__tests__error_event_oversized_input_snapshot.snap
---
source: tui-transcript/src/history_cell.rs
expression: rendered
---
■ Message exceeds the maximum length of 1048576 characters (1048577 provided).
