xedoc-rs/tui-transcript/src/history_cell/snapshots/xedoc_tui_transcript__history_cell__tests__mcp_inventory_loading_snapshot.snap
---
source: tui-transcript/src/history_cell.rs
assertion_line: 3477
expression: rendered
---
• Loading MCP inventory…
