xedoc-rs/tui-transcript/src/history_cell/snapshots/xedoc_tui_transcript__history_cell__tests__mcp_tools_output_from_statuses_renders_verbose_inventory.snap
---
source: tui-transcript/src/history_cell/tests.rs
expression: rendered
---
/mcp

🔌  MCP Tools

  • plugin_docs
    • Auth: Unsupported
    • Tools: lookup
    • Resources: Docs (file:///docs)
    • Resource templates: Doc Template (file:///docs/{id})
